# Lab-Nstu

./: .gitignore  Lab_1.cpp  README.md  laba3.c  laba4.cpp  laba5.cpp
2_Semestr/: Lab_1.1.c  Lab_1.6.c  laba1.2.c  laba1.3.c  laba1.4.c  laba1.5.c
2_Semestr/Lab1/: lab1_8.h  laba1.3.c  laba1.4.c  laba1.5.c  laba1.6.c
2_Semestr/Lab2/: laba2.c
2_Semestr/Lab3/: laba3.c
2_Semestr/Lab4/: lab4_1.c  lab4_2.c
2_Semestr/Lab_1/: laba1.1.c
2_Semestr/RGZ/: CMakeLists.txt  RGZ.c  RGZ.h
3_Semestr/: Lab1.cpp
3_Semestr/Comp_graph/: Lab1.cpp
3_Semestr/Lab_1/: main.c
3_Semestr/Math/: Makefile  README.md
3_Semestr/Math/lab1/: data.h  main.c
3_Semestr/Math/lab2/: data.h  input.txt  main.c
3_Semestr/Programming/Lab2/: My_lib.c
3_Semestr/Programming/Lab_1/: Lab1.c  Lab_1.txt
3_Semestr/Programming/Lab_2/: Lab2.c  my_lib.h
3_Semestr/Programming/Lab_3/: build.sh  file2.txt  main.c
3_Semestr/Programming/Lab_4/: build.sh  client.c  server.c
4_Semestr/ADS/Lab1/: CMakeLists.txt  README.md  conanfile.txt  container.hpp  interface.hpp  menu.cpp  test.cpp
4_Semestr/ADS/Lab2/: conanfile.txt
4_Semestr/ADS/Lab2/docs/: CMakeLists.txt
4_Semestr/ADS/Lab3/: CMakeLists.txt
4_Semestr/ADS/Lab3/include/: bst.hpp  randtree.hpp  t234.hpp
4_Semestr/ADS/Lab3/test/: CMakeLists.txt  randtree.cpp  t234.cpp
4_Semestr/ADS/lab2/: CMakeLists.txt
4_Semestr/ADS/lab2/include/: bst_impl.hpp
4_Semestr/ADS/lab2/test/: CMakeLists.txt  main.cpp
self-project/: main.c
